<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingHorizontal="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yundanzhuangtai1"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_state"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yuundanhao"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/luxian1"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_luxian"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chexing1"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_chexing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zhongliang"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_zhongliang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huowumingcheng"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_mingcheng"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuoshu"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_tuoshu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiji"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_tiji"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/baoshi"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_baozhi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jihuatihuoshijian"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/tv_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beizhu1"
                    android:textColor="@color/black"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/beizhu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black_666"
                    android:textSize="14sp"

                    android:layout_marginLeft="10dp"
                    android:singleLine="true"/>

            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/main_gray_line"/>
            <com.babuwyt.jonylibrary.views.CustomListView
                android:id="@+id/listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/tv_tupaiche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qupaiche"
                android:gravity="center"
                android:layout_margin="20dp"
                android:background="@drawable/login_btn_bg_shape"/>


        </LinearLayout>



    </ScrollView>


</LinearLayout>