<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary">


            <RelativeLayout
                android:id="@+id/relayout_msg"
                android:layout_width="60dp"
                android:layout_gravity="right"
                android:layout_height="match_parent"
                android:visibility="invisible"
                android:layout_alignParentRight="true">
                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:padding="5dp"
                    android:layout_marginRight="13dp"
                    android:src="@drawable/message"/>
                <TextView
                    android:id="@+id/tv_msgnum"
                    android:layout_width="wrap_content"
                    android:layout_height="15dp"
                    android:minWidth="15dp"
                    android:text="10"
                    android:layout_alignRight="@+id/icon"
                    android:layout_alignTop="@+id/icon"
                    android:gravity="center"
                    android:textSize="10sp"
                    android:textColor="@color/white"
                    android:background="@drawable/main_msg_bg_shape"/>
            </RelativeLayout>

        </android.support.v7.widget.Toolbar>
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/main_gray_line"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <com.liaoinstan.springview.widget.SpringView
                android:id="@+id/springview"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"/>
            </com.liaoinstan.springview.widget.SpringView>
            <TextView
                android:id="@+id/tv_yundangenzong"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/main_blue_yundangenzong_background_shape"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:gravity="center"
                android:text="@string/yundangenzong"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:layout_marginBottom="50dp"
                android:layout_marginRight="20dp"/>

        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:tag="left"
        android:gravity="center_horizontal"
        android:fitsSystemWindows="true"
        android:background="#fff"
        android:orientation="vertical">
        <ImageView
            android:layout_marginTop="40dp"
            android:id="@+id/imageView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/icon_cebianlan_logo"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/nav_header_vertical_spacing"

            android:textSize="16sp"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/tv_hehuoren"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black_333"
            android:singleLine="true"
            android:ellipsize="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_sijinum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textColor="@color/black_333"
                android:textSize="14sp"
                android:gravity="center|right"/>
            <View
                android:layout_width="20dp"
                android:layout_height="1px"/>
            <TextView
                android:id="@+id/tv_ordernum"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:textColor="@color/black_333"
                android:textSize="14sp"
                android:gravity="center|left"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginTop="50dp">
            <LinearLayout
                android:id="@+id/linear_siji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="10dp"
                android:layout_marginVertical="5dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:layout_gravity="right"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/icon_cebianlan_truck"/>
                </LinearLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/wodesiji"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_yundan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="10dp"
                android:layout_marginVertical="5dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:layout_gravity="right"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/icon_cebianlan_clipboard"/>
                </LinearLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/my_yundan"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_tuiguang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="10dp"
                android:layout_marginVertical="5dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:layout_gravity="right"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/icon_cebianlan_tuiguang"/>
                </LinearLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/my_tuiguang"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linear_setting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:paddingVertical="10dp"
                android:layout_marginVertical="5dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleType="centerInside"
                        android:layout_gravity="right"
                        android:layout_marginRight="30dp"
                        android:src="@drawable/icon_cebianlan_setting"/>
                </LinearLayout>
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/setting"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:layout_marginLeft="10dp"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginBottom="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="万运通车队"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/tv_versionName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="12sp"/>
        </LinearLayout>


    </LinearLayout>

</android.support.v4.widget.DrawerLayout>
